fix: fix notification mobile display

--- a/src/components/Notification/notification.module.scss
+++ b/src/components/Notification/notification.module.scss
@@ -1,49 +1,48 @@
-.notificationContainer{
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 9999;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    height: 1px;
-    transition: all 0.3s;
+.notificationContainer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  height: 1px;
+  transition: all 0.3s;
 
-   
-
-    @media (max-width: 500px) {
-
-        bottom: 0;
-        top: unset;
-        
-    }
+  @media (max-width: 500px) {
+    bottom: 0;
+    top: unset;
+    flex-direction: column-reverse;
+  }
 }
 
 .notification {
-    background-color: #f0f4c3;
-    font-size: 12px;
-    color: #827717;
-    padding: 6px;
-    margin-bottom: 4px;
-    border-radius: 4px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  background-color: #f0f4c3;
+  font-size: 12px;
+  color: #827717;
+  padding: 6px;
+  margin-bottom: 4px;
+  border-radius: 4px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateX(100%);
+  animation:
+    slide-in 0.5s forwards,
+    fade-out 0.5s 2.5s forwards;
+}
+
+@keyframes slide-in {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fade-out {
+  to {
     opacity: 0;
     transform: translateX(100%);
-    animation: slide-in 0.5s forwards, fade-out 0.5s 2.5s forwards;
   }
-  
-  @keyframes slide-in {
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-  
-  @keyframes fade-out {
-    to {
-      opacity: 0;
-      transform: translateX(100%);
-    }
-  }
+}
